[package]
name = "starfyre"
version = "0.5.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "starfyre"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.16.1", features = ["extension-module"] }

[tool.maturin]
include = [{ path = "src/**/*", format = "sdist" }, { path = "starfyre/**/*", format = "sdist" }]
