name = "starfyre"
description = "A Python Framework for writing Reactive web Front-Ends"
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"


[project]
name = "starfyre"
requires-python = ">=3.10"
dependencies=[]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]


#######
# tox
#######

[tool.tox]
legacy_tox_ini = """

[config]
sources = {toxinidir}/starfyre


envlist =
    format
    ruff


[testenv:format]
basepython = python3.10
skip_install = True
commands = 
    isort --atomic {[config]sources}
    black {[config]sources}
deps =
    isort
    black


[testenv:ruff]
basepython = python3.10
skip_install = True
commands = ruff --fix {[config]sources}
deps =
    ruff

"""

[tool.ruff]
# line-too-ling
ignore = ["E501"]
