[tool.poetry]
name = "starfyre"
version = "0.20.0"
description = "A Python Framework for writing Reactive web Front-Ends"
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
license = "BSD 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.29.0"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.4"
black = "^23.3.0"
commitizen = "^3.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
