[tool.poetry]
name = "create-starfyre-app"
version = "0.1.0"
description = ""
authors = ["Sanskar Jethi <sansyrox@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
starfyre = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
